--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">55 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>I Turned Pizza Dough Into a Fougasse! ‼️🍕#pizza #bread #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -398,7 +398,7 @@
                     <div class="video-info">
                         <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">55 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7975,7 +7975,7 @@
                         <div class="video-info">
                             <h3>Karma, Enlightenment, Devotion & Sadhana – Unreleased Talk from 2008 | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7986,7 +7986,7 @@
                         <div class="video-info">
                             <h3>What Happens at 3:30 AM? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>I Turned Pizza Dough Into a Fougasse! ‼️🍕#pizza #bread #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
