--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How difficulty awakens your consciousness</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>How difficulty awakens your consciousness</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8063,7 +8063,7 @@
                         <div class="video-info">
                             <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
